# ColorTree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Resources/: config.json
Resources/Shaders/: texture.frag  texture.vert
Resources/Web/: index.html  script.js
Source/: Application.cpp  Application.h  ColorNode.cpp  ColorNode.h  Filesystem.cpp  Filesystem.h  Quad.cpp  Settings.cpp  Settings.h  Texture.cpp  Webserver.cpp  Webserver.h  main.cpp
Source/Graphics/: Quad.cpp  Quad.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Web/: gulpfile.js  package.json
Web/wwwroot/: admin.html  app.html  colorpicker.html  index.html  styles.css
Web/wwwroot/app/: admin.ts  app.ts  color.ts  colorpicker.ts  colorservice.ts  main.ts
Web/wwwroot/old/: index.html
